--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97d671">  <td>24/03/20 21:40:35</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@6a28ffa4]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1608297024</td>   <td></td> </tr>
-<tr bgcolor="8e97bc">  <td>24/03/20 21:40:35</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidateAddAndDeleteData_Functionality.beforeClass()[pri:0, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@6a28ffa4]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1608297024</td>   <td></td> </tr>
-<tr bgcolor="8e97bc">  <td>24/03/20 21:40:35</td>   <td>476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateGetAllRepos()[pri:0, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@6a28ffa4]">validateGetAllRepos</td> 
-  <td>main@1608297024</td>   <td></td> </tr>
+<tr bgcolor="6070ac">  <td>24/03/21 11:28:33</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuite()[pri:0, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:33</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidateAddAndDeleteData_Functionality.beforeClass()[pri:0, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:33</td>   <td>487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateGetSingleRepo()[pri:0, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateGetSingleRepo</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:35</td>   <td>2047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateGetNonExistSingleRepo()[pri:1, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateGetNonExistSingleRepo</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:35</td>   <td>2314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateGetAllRepos()[pri:2, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateGetAllRepos</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:36</td>   <td>2990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateCreateRepofunctionality()[pri:3, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateCreateRepofunctionality</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:37</td>   <td>3898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateExistingRepoErrorfunctionality()[pri:4, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateExistingRepoErrorfunctionality</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:37</td>   <td>4173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateUpdateRepofunctionality()[pri:5, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateUpdateRepofunctionality</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:37</td>   <td>4697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateDeleteRepoFunctionality()[pri:6, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateDeleteRepoFunctionality</td> 
+  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/03/21 11:28:38</td>   <td>5084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateAddAndDeleteData_Functionality.validateDeletedRepoErrorfunctionality()[pri:7, instance:com.github.tests.CRUD.ValidateAddAndDeleteData_Functionality@9225652]">validateDeletedRepoErrorfunctionality</td> 
+  <td>main@350068407</td>   <td></td> </tr>
 </table>
